--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["y shroff"]
 python = "^3.8"
 python-dotenv = "requests"
 Flask = "^2.0.2"
+requests = "^2.26.0"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.9.2"
