--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,6 +1,10 @@
 # List the start up tasks. Learn more https://www.gitpod.io/docs/config-start-tasks/
 tasks:
-  - init: echo 'init script' # runs during prebuild
+  - init: |  # runs during prebuild
+      pip install poetry 
+      export PIP_USER=false 
+      poetry config cache-dir /workspace/.cache/pypoetry 
+      poetry update
     command: flask run
 
 # List the ports to expose. Learn more https://www.gitpod.io/docs/config-ports/
