--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -5,7 +5,9 @@ tasks:
       export PIP_USER=false 
       poetry config cache-dir /workspace/.cache/pypoetry 
       poetry update
-    command: flask run
+      export FLASK_APP=python-AI-webapp 
+      export FLASK_ENV=development
+    command: poetry run flask run
 
 # List the ports to expose. Learn more https://www.gitpod.io/docs/config-ports/
 ports:
