--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -2,8 +2,7 @@
 tasks:
   - init: |  # runs during prebuild
       pip install poetry 
-      export PIP_USER=false 
-      poetry config cache-dir /workspace/.cache/pypoetry 
+      export PIP_USER=false #poetry config cache-dir /workspace/.cache/pypoetry # 
       poetry update
       export FLASK_APP=python-AI-webapp 
       export FLASK_ENV=development
