--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -4,7 +4,7 @@ tasks:
       pip install poetry 
       export PIP_USER=false #poetry config cache-dir /workspace/.cache/pypoetry # 
       poetry update
-      export FLASK_APP=python-AI-webapp 
+      export FLASK_APP=app.py
       export FLASK_ENV=development
     command: poetry run flask run
 
