--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -3,7 +3,8 @@ tasks:
   - init: |  # runs during prebuild
       pip install poetry 
       export PIP_USER=false 
-      poetry config cache-dir /workspace/.cache/pypoetry # poetry update
+      poetry config cache-dir /workspace/.cache/pypoetry 
+      poetry update
       export FLASK_APP=app.py
       export FLASK_ENV=development
     command: poetry run flask run
